<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/scoreTheme"
        android:text="@string/testScore"
        android:layout_gravity="center"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

       <TextView
           android:id="@+id/testScore"
           style="@style/scoreTheme"
           android:textSize="40sp"/>
        <TextView
            android:id="@+id/totalScore"
            android:text="@string/total"
            style="@style/scoreTheme"
            android:textSize="40sp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/scoreTheme"
            android:text="@string/wrong"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/incorrectScore"
            style="@style/scoreTheme"
            android:textSize="30sp"/>
    </LinearLayout>
    <Button
        android:layout_margin="10dp"
        android:text="@string/tryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="backToQuiz" />

</LinearLayout>